--- a/index_v1.html
+++ b/index_v1.html
@@ -9,7 +9,7 @@
   <body>
     <section>
       <img src="static/bg1.png" alt="bg" id="bg">
-      <img src="static/moon2.png" alt="moon" id="moon">
+      <img src="static/moon.png" alt="moon" id="moon">
       <img src="static/mountain1.png" alt="mountain" id="mountain">
       <img src="static/road1.png" alt="road" id="road">
       <h2 id="text"><u>Tirtharaj sinha</u></h2>
